k8s/manifests/argocd-example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    istio-injection: enabled # for proxy sidecar injection
